[workspace]

members = [
    "bowbend_core",
    "ffi",
    "xtask"
]

# Exclude all SDKs to prevent crate name collisions
exclude = [
    "sdks/python",
    "sdks/rust",
    # The rust integration test depends on the rust SDK by path.  This would pull it into the workspace.
    "integration/rust"
]

resolver = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"