[package]
name = "bowbend_core"
version = "0.1.0"
authors = ["Stuart Small <stuart.alan.small@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3.4"
byteorder = "1.4"
futures = "0.3"
ipnet = "2.3"
linked-hash-map = "0.5"
mio = { version="0.8", features=["os-ext"] }
nom = "7.1"
openssl = { version = "0.10", features = ["vendored"] }
pin-project = "1"
pnet = "0.33"
rand = { version="0.8", features=["std", "small_rng"] }
reqwest = "0.11"
socket2 = { version="0.4", features=["all"]}
tokio = { version="1.25", features=["full"] }
tokio-openssl = "0.6.3"
tokio-stream = "0.1.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4.3"