[package]
name = "bowbend_core"
version = "0.1.0"
authors = ["Stuart Small <stuart.alan.small@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3"
byteorder = "1.4"
futures = "0.3"
ipnet = "2.7"
linked-hash-map = "0.5"
mio = { version="0.8", features=["os-ext"] }
nom = "7.1"
openssl = { version = "0.10", features = ["vendored"] }
pin-project = "1"
pnet = "0.34"
rand = { version="0.8", features=["std", "small_rng"] }
reqwest = "0.11"
socket2 = { version="0.5", features=["all"]}
tokio = { version="1.28", features=["full"] }
tokio-openssl = "0.6"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
