[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ipnet = "2.3"
futures = "0.3"
bowbend_core = { path = "../bowbend_core" }
safer-ffi = { version = "0.0.7", features = ["proc_macros"] }
tokio = { version="1.10", features=["full"] }
tracing = "0.1"

[features]
c-headers = ["safer-ffi/headers"]
