[package]
name = "ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ipnet = "2.8"
futures = "0.3"
bowbend_core = { path = "../bowbend_core" }
safer-ffi = { version = "0.0.10", features = ["proc_macros"] }
tokio = { version="1.28", features=["full"] }
tracing = "0.1"

[features]
c-headers = ["safer-ffi/headers"]
