[package]
name = "portscanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "portscanner"
crate-type = ["cdylib"]

[dependencies]
ffi = { path = "../../ffi" }

[profile.dev]
# I don't understand for the life of my *why* this work but it does.  This is
# done so we can reexport symbols on the dev builds of the python sdk.  It came form here:
# https://github.com/rust-lang/rfcs/issues/2771#issuecomment-481630590
lto = true
incremental = false



[profile.release]
lto = true
incremental = false
codegen-units = 1
strip = true
panic = "abort"