[package]
name = "bowbend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bowbend"
crate-type = ["cdylib"]

[dependencies]
ffi = { path = "../../ffi" }

[profile.release]
lto = true
incremental = false
codegen-units = 1
strip = true
panic = "abort"