[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "bowbend"
requires-python = ">=3.10"
dependencies = [
    "cffi==1.15.1",
    "janus==1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest==7.2.2",
    "pytest-asyncio==0.20.3",
    "pytest-timeout==2.1.0"
]
lint = [
    "flake8==6.0.0",
    "mypy==1.1.1",
    "pylint==2.14.4",
]

[tool.maturin]
bindings = "cffi"
sdist-include = ["target/header.h"]