[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "bowbend"
requires-python = ">=3.10"
dependencies = [
    "cffi==1.15.1",
    "janus==1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest==7.3.1",
    "pytest-asyncio==0.21.0",
    "pytest-timeout==2.1.0"
]
lint = [
    "flake8==6.0.0",
    "mypy==1.2.0",
    "pylint==2.14.4",
]

[tool.maturin]
bindings = "cffi"
sdist-include = ["target/header.h"]