[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "bowbend"
requires-python = ">=3.10"
dependencies = [
    "cffi==1.15.1",
    "janus==1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.0.0",
    "pytest-asyncio==0.21.1",
    "pytest-timeout==2.2.0"
]
lint = [
    "flake8==6.1.0",
    "mypy==1.7.0",
    "pylint==3.0.2",
]

[tool.maturin]
bindings = "cffi"
sdist-include = ["target/header.h"]